# Guardian_Mesh_OOPS_Project

./: .gitignore  CMakeLists.txt  Main.cpp  README_Mesh.md  guardian_mesh
Logs/: final_received_messages.txt
data/: nodes_config.txt  nodes_session.txt
include/: Battery.h  EmergencyBase.h  Node.h  Packet.h  StaticRelay.h  StudentNode.h  World.h
src/: Battery.cpp  EmergencyBase.cpp  Node.cpp  Packet.cpp  StaticRelay.cpp  StudentNode.cpp  World.cpp
